@@ -1,6 +1,6 @@
 [
 {
-  "modid": "mod_Factorization",
+  "modid": "factorization",
   "name": "Factorization",
   "description": "",
   "version": "",
