@@ -54,17 +54,96 @@ The slag furnace works similarly to the vanilla furnace, but has an extra output
 [u][b]Diamond Shards[/b][/u]
 The recipe for Diamond Shards is very expensive and volatile. Diamond Shards can only be safely created in a Stamper. (You can make the Craft Packet directly from a crafting table.)
 [img]http://i.imgur.com/XzkE8.png[/img]
-Now, head into the Nether with a Diamond Shard to learn all about Demons and Wrath.
 
 [/spoiler]
+
+[u][b][size=4][anchor=CHARGE]Electric Charge[/anchor][/size][/b][/u]
+[spoiler]
+The electricity system in this mod is called [b]Charge[/b]. The first electrical component is a battery. Batteries are made with acid, lead, and iron.
+[img]http://i.imgur.com/dDA3w.png[/img]
+[img]http://i.imgur.com/wSE8l.png[/img]
+The first thing to do with a battery is to use it to create a magnet. To do that, we need some wire...
+[img]http://i.imgur.com/ZPB1b.png[/img]
+...and an iron ingot. Wrap the wires around the iron bar, and connect both ends to the battery to magnetize the iron:
+[img]http://i.imgur.com/Lyv3H.png[/img]
+This will drain much of the energy out of the battery, but there'll be enough left to magnetize a second iron bar. To recharge the battery, we'll need to make a solar turbine, and a few mirrors.
+To make the turbine, we'll need a motor, and a fan. Magnets are needed, and quite a few insulated coils. Slag all that silver ore! You'll use much of your lead making coils.
+[img]http://i.imgur.com/0PoVo.png[/img]
+[img]http://i.imgur.com/dzkPr.png[/img]
+[img]http://i.imgur.com/y8raO.png[/img]
+[img]http://i.imgur.com/OVbie.png[/img]
+
+To power the solar turbine, you need to craft a few mirrors.
+[img]http://i.imgur.com/FwhpS.png[/img]
+You'll need to place a good number of them around the solar turbine. The turbine itself needs access to water, so place an infinite water source beneath it.
+[img]http://i.imgur.com/iJ29G.png[/img]
+This is nearly the maximum amount of mirrors you can use:
+[img]http://i.imgur.com/Hek4d.png[/img]
+
+Back to wires:
+[img]http://i.imgur.com/ZPB1b.png[/img]
+Wires can be run up walls, but must be supported by a solid block. You'll also need to place a bit of wire to go over corners. You can place a wire on top of another wire to do this. If you don't like the way a wire looks, you can try replacing it while holding shift.
+[img]http://i.imgur.com/2w7qx.png[/img]
+
+You can measure the charge in wires (and in other things) using the Charge Meter:
+[img]http://i.imgur.com/4ylHf.png[/img]
+This will measure the charge in the block you clicked on, and give you the average charge in the adjacent conductors. It may also give other info.
+
+Charge moves randomly in conductive blocks. Every tick, all the conductors will swap their charges with a neighbor chosen at random. Each conductor block has a charge value from zero on up. The solar turbine will increase the charge in itself up to how many mirrors it has. High charge will flood out low charge. Charge will move just as well through other conductive blocks just as well as wires, so you won't need to wire up adjacent machines.
+[/spoiler]
+
+[u][b][size=4][anchor=MACHINES]Machines and Ore Processing[/anchor][/size][/b][/u]
+[spoiler]
+All of these machines require [b]charge[/b] to run. Here's a bunch of crafting recipes:
+[img]http://i.imgur.com/gyhwb.png[/img]
+The [b]heater[/b] should be placed next to a furnace, a slag furnace, or a crystallizer. It will provide heat to the furnaces, and will heat the solution in the crystallizer. It takes about 5 mirrors to run a heater. You can put multiple heaters next to a furnace to pump extra heat into it. This will make it reach max temperature quicker, and run faster.
+
+The [b]grinder[/b] will grind ores. This is the start of the full ore processing chain. It takes 11 mirrors to get it started, and once it's at full speed, only needs half the power. Obtaining the [b]Dark Iron Ingot[/b] is described in "Demons and Wrath".
+
+The [b]mixer[/b] mixes up various materials with water. It needs only 2 mirrors to run.
+
+The [b]crystallizer[/b] must be heated up with a heater, but it only for a brief period of time. After that, it must be left alone to cool off as the crystal forms. This process takes 20 minutes. 
+
+
+[b]Ore processing[/b] allows you to get extra ingot yields from your ores, ranging from 120% (using merely a slag furnace) to 300% (using several steps, ending with crystalline metal). This steps work with Iron, Gold, Lead (the primary metal in [url="http://en.wikipedia.org/wiki/Galena"]Silver Ore[/url]), and also Copper and Tin.
+[size=1]This got formatted badly. MCF needs to lern2table. Someone who isn't me is quite free to fix it.[/size]
+
+
+[code]
+Ore                   The block you know and love.
+                      Smelt: 100%   Slag: 120%[/code]
+↓ Grind in a [b]Grinder[/b] ↓
+[code]
+Ore Gravel            Ground up by sharp diamond shards, it is now ready for further processing.
+                      Smelt: 140%   Slag: 160%[/code]
+↓ Wash with water from a bucket in a [b]Mixer[/b] ↓
+[code]
+Clean Gravel          Many silicates and other natural contaminates have been washed off the ore.
+                      Smelt: Still 140%[/code]
+↓ Reduce in a [b]Slag Furnace[/b] ↓
+[code]
+Reduced Chunks        The ore has now been deoxydized, and is quite clean.
+                      Smelt: 200%[/code]
+↓ Purify in a [b]Crystallizer[/b] using [b]Sulfuric Acid[/b] ↓
+[code]
+Crystalline Metal     The metal has been dissolved in acid, heated, and then cooled slowly, allowing the
+                      formation of a metallic crystal. No impurities remain. Just smelt it to get an ingot.
+                      Smelt: 300%[/code]
+
+Here's how to crystallize lead:
+[img]http://i.imgur.com/37RHg.png[/img]
+
+You don't need to process all the way! You can stop whenever you want. But the farther you go, the better yields you will get.
+[/spoiler]
+
 [u][b][size=4][anchor=WRATH]Demons and Wrath[/anchor][/size][/b][/u]
 [spoiler]
 All of these recipes require access to a fully stocked Nether Fortress.
 [u]The [b]Wrath Igniter[/b][/u]
 [img]http://i.imgur.com/sc9HV.png[/img]
-Wrathfire is a very special kind of fire. It will only burn on the block you clicked on, and will spread very quickly on it. Plant materials will burn away, obsidian will liquify into lava again, ice will vaporize instantly, and various forms of stone and other materials can be converted to another and back. When the fire dies, it will leave behind normal fire, which is much less picky about what it burns. There are two particularly important fuels for Wrathfire: Netherbrick, and iron blocks. Netherbrick will never be burned up: instead, the Wrath Fire will not spread, and can be kindled eternal. Using this property, a Wrath Forge can be built.
+Wrathfire is a very special kind of fire. It will only burn on the block you clicked on, and will spread very quickly on it. Plant materials will burn away, obsidian will liquify into lava again, ice will vaporize instantly, and various forms of stone and other materials can be converted to another and back. When the fire dies, it will leave behind lots and lots of normal fire, which is much less picky about what it burns, so beware. There are two particularly important fuels for Wrathfire: Netherbrick, and iron blocks. Netherbrick will never be burned up: instead, the Wrath Fire will not spread, and can be kindled eternal. Using this property, a Wrath Forge can be built.
 [img]http://i.imgur.com/LG1SE.png[/img]
-A Wrath Forge needs to have a certain amount of netherbrick, or else the Wrath Fire will die out. Placing fuels, such as Iron Blocks, next to the Wrath Fire will burn it, but will also weaken the fire. If the fire becomes weak enough, it will be extinguished. The fire can be strengthed with netherrack.
+A Wrath Forge needs to have a certain amount of netherbrick, or else the Wrath Fire will die out. Placing fuels, such as Iron Blocks, next to the Wrath Fire will burn it, but will also weaken the fire. If the fire becomes weak enough, it will be extinguished.
 
 [u][b]Dark Iron[/b][/u]
 Burning an iron block with Wrath Fire will leave behind a Dark Iron block. This block can be uncrafted into 4 Dark Iron ingots. This metal appears to be Ender-aligned, and has a few good uses, which will be discussed after Demons.
@@ -72,7 +151,7 @@ Burning an iron block with Wrath Fire will leave behind a Dark Iron block. This 
 
 [u][b]Demons[/b][/u]
 [img]http://i.imgur.com/1z6J2.png[/img]
-Tiny demons are secretive creatures that can be found only in the nether, though they usually stay out of sight. Their favorite activities are eating netherwort, and biting you with their poisonous fangs. If they find a chest containing plenty of netherwort, they are sure to sneak in and become trapped inside. Be careful with them, as they will attempt to kill you when you handle them. You can get slightly more control over them by tying them up with a bit of string on a crafting table.
+These tiny demons are secretive creatures that can be found only in the nether, though they usually stay out of sight. Their favorite activities are eating netherwort, and biting you with their poisonous fangs. If they find a chest containing plenty of netherwort, they are sure to sneak in and become trapped inside. Be careful with them, as they will attempt to kill you when you handle them. You can get slightly more control over them by tying them up with a bit of string on a crafting table.
 
 A chest must have at least 24 netherwort to attract your first demon. If you are paying attention, you can remove it before it eats all your netherwort. No more than 1 demon will enter a chest per minute. Demons won't enter a chest if it has things other than netherwart and demons. Be aware that they will accumulate and eat up all the netherwort if they aren't tended to.
 
@@ -120,13 +199,15 @@ The Bag of Holding can store parts of your inventory for you. The BoH moves the 
 Press ` at any time to put your inventory into the BoH and pull other stuff out. You can add another column of storage to the BoH by crafting it with an enderpearl, a dark iron ingot, and a bit of leather.
 [img]http://i.imgur.com/UUchz.png[/img]
 
-The best place to put your Bag of Holding depends on how many columns it stores! An new BoH should go in the 4th column from the right; this way the location of items won't change as you use `.
+The best place to put your Bag of Holding depends on how many columns it stores! A new BoH should go in the 4th column from the right; this way the location of items won't change as you use `.
 [img]http://i.imgur.com/BNZTv.png[/img]
 Specifically, you'll want to place the bag such that the number of inventory columns it stores is a multiple of the number of columns to its right.
-
 [/spoiler]
+
 [u][b][size=4][anchor=MECHA]Mecha-Armor[/anchor][/size][/b][/u]
 [spoiler]
+Mecha-Armor isn't quite ready yet. It is waiting on a material that does not yet exist.
+
 [u]The [b]Mecha-Chasis[/b][/u]
 The Mecha-Chasis is a slightly expensive armor crafting component made by boxing a gold nugget inside 8 iron.
 [img]http://i.imgur.com/n3eSP.png[/img]
@@ -162,13 +243,10 @@ Push blocks everywhere! Be the Enderman! This will push a block that's in front 
 
 [u]Other Stuff/Future Plans[/u]
 [spoiler]
-Electricity: power gen, wiring, batteries, heaters...
 More Mecha-Armor upgrades
 Ceramics
 ? ? ?
 
-
-The Sentry Demon is a chunk loader. Please [b]do not[/b] use it with frames; it's currently broken.
 [/spoiler]
 
 
@@ -176,22 +254,26 @@ The Sentry Demon is a chunk loader. Please [b]do not[/b] use it with frames; it'
 [u][b][size=6][anchor=INSTALL]Installation[/anchor][/size][/b][/u]
 This is a [url="http://lexmanos.no-ip.org:8080/job/Forge/Recommended/"]Minecraft Forge[/url] mod. It uses 3 block IDs, and a bunch of item IDs.
 
-1. Install [url="http://lexmanos.no-ip.org:8080/job/Forge/Recommended/"]Minecraft Forge[/url] by extracting the contents of the forge download into the Minecraft jar. Be sure to delete the META-INF/ folder ([u]unless you are installing a server![/u]). If you already have a version of forge that's as old as or newer than 3.1.2, it should work fine.
-2. Check that the forge install worked by running the client (or the server). Forge information should be on the title screen  (or in the server's logs).
-3. Put Factorization.jar/Factorization_server.jar into the mods folder. Restart Minecraft.
+1. Install [url="http://lexmanos.no-ip.org:8080/job/Forge/Recommended/"]Minecraft Forge[/url] by extracting the contents of the forge download into the Minecraft jar. Be sure to delete the META-INF/ folder ([u]unless you are installing a server![/u]). If you already have a version of forge that's as old as or newer than ???, it should work fine.
+2. Check that the forge install worked by running the client (or the server). Forge information should be on the title screen (or in the server's logs).
+3. Put Factorization.jar into the mods folder. Restart Minecraft.
 4. This instruction list is too short!
 5. There. That's better.
 
 
 [u][b][size=6][anchor=DOWNLOAD]Download[/anchor][/size][/b][/u]
-0.4.0
-[url="http://adf.ly/Bp1nf"]Client (adfly + MediaFire)[/url], or [url="http://adf.ly/Bp1x9"](adfly + DropBox)[/url]
-[url="http://adf.ly/Bp1po"]Server (adfly + MediaFire)[/url], or [url="http://adf.ly/Bp1v3"](adfly + DropBox)[/url]
+0.5.? (MC 1.3.2)
+Note that all proper Forge mods (such as this one) now use the same mod files for both server and client.
 
 I recommend you also install [url="http://www.minecraftforum.net/topic/365357-"]RedPower[/url] and [url="http://www.minecraftforum.net/topic/909223-"]NEI[/url].
 
 Old versions
 [spoiler]
+0.4.0 (MC 1.2.5)
+[url="http://adf.ly/Bp1nf"]Client (adfly + MediaFire)[/url], or [url="http://adf.ly/Bp1x9"](adfly + DropBox)[/url]
+[url="http://adf.ly/Bp1po"]Server (adfly + MediaFire)[/url], or [url="http://adf.ly/Bp1v3"](adfly + DropBox)[/url]
+
+
 0.3.2
 [url="http://adf.ly/B8rGI"]Client (adfly + MediaFire)[/url], or [url="http://adf.ly/B8qrB"](adfly + DropBox)[/url]
 [url="http://adf.ly/B8rSI"]Server (adfly + MediaFire)[/url], or [url="http://adf.ly/B8r5N"](adfly + DropBox)[/url]
